(rule
  (targets ffi_generated.ml)
  (deps ../stubgen/ffi_stubgen.exe)
  (action (with-stdout-to %{targets} (bash "%{deps} -ml")))
)

(rule
  (targets ffi_generated_stubs.c)
  (deps ../stubgen/ffi_stubgen.exe)
  (action (with-stdout-to %{targets} (bash "%{deps} -c")))
)

(rule
  (targets ffi_generated_types.ml)
  (deps ../stubgen/ffi_ml_types_stubgen.exe)
  (action (with-stdout-to %{targets} (bash "%{deps} -c")))
)

(library
  (name pci)
  (public_name pci)
  (foreign_stubs (language c) (names ffi_generated_stubs) (flags -lpci))
  (c_library_flags -lpci)
  (libraries pci_bindings ctypes.stubs)
)
